vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_unused_unsafe_block.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_unused_unsafe_block.vv:3:3: error: expression evaluated but not used
    1 | fn main() {
    2 |     unsafe {
    3 |         $embed_file(@FILE)
      |         ~~~~~~~~~~~~~~~~~~
    4 |     }
    5 | }
