vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_unused_unsafe_block.vv
fn main() {
	unsafe {
		$embed_file(@FILE)
	}
}
